Top-bar fixed z-index

--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
   box-sizing: border-box;
 }
 .sidebar {
-  height: 80vh;
+  height: 90vh;
   width: 15vw;
   top: 10vh;
   background-color: #000000;
   color: white;
+  padding-top: 10vh;
 }
 .main-window {
   position: absolute;
@@ -30,4 +31,6 @@
   width: 100vw;
   background-color: #000000;
   color: white;
+  position: fixed;
+  z-index: 1;
 }
